# a2a-forge

./: .gitignore  A2A_Workbench_PRD.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  README_CN.md  a2a_workbench_ui_mockup.html  export_gh.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
.memsearch/memory/: 2026-03-24.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
conversations/: 20260326-11-14-38-Greeting-and-quick-check-in.md  20260326-17-30-22-模型身份与能力讨论.md
docs/: README.md  README_CN.md  codex_collaboration_summary.md  codex_collaboration_summary_2.md  codex_collaboration_summary_3.md  codex_fix_todo.md  codex_fix_todo_1.md  codex_fix_todo_10.md  codex_fix_todo_11.md  codex_fix_todo_12.md  codex_fix_todo_13.md  codex_fix_todo_14.md  codex_fix_todo_15.md  codex_fix_todo_2.md  codex_fix_todo_3.md  codex_fix_todo_4.md  codex_fix_todo_5.md  codex_fix_todo_6.md  codex_fix_todo_7.md  codex_fix_todo_8.md  codex_fix_todo_9.md  codex_review.md  codex_review_1.md  codex_review_10.md  codex_review_11.md  codex_review_12.md  codex_review_13.md  codex_review_14.md  codex_review_15.md  codex_review_2.md  codex_review_3.md  codex_review_4.md  codex_review_5.md  codex_review_6.md  codex_review_7.md  codex_review_8.md  codex_review_9.md  hackernews-launch.md  index.html
mock-agent/: index.js  package.json
src/: App.tsx  bindings.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: credentials.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/a2a/: assertions.rs  client.rs  mod.rs  runner.rs  types.rs
src-tauri/src/commands/: agents.rs  community.rs  credentials.rs  history.rs  mod.rs  proxy.rs  saved_tests.rs  settings.rs  suites.rs  tasks.rs  workspace.rs  workspaces.rs
src-tauri/src/proxy/: interceptor.rs  mod.rs  recorder.rs  registry.rs  server.rs
(+105 files in other folders)
