[package]
name = "a2a-workbench"
version = "0.1.0"
edition = "2021"

[lib]
name = "a2a_workbench"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-window-state = "2"
tauri-plugin-store = "2"
tauri-plugin-keyring = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
specta = "=2.0.0-rc.22"
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
