[package]
name = "a2a-forge"
version = "0.1.0"
edition = "2021"

[lib]
name = "a2a_forge"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-window-state = "2"
tauri-plugin-store = "2"
tauri-plugin-keyring = "0.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
futures = "0.3"
log = "0.4"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
keyring = "3"
jsonpath-rust = "0.7"
nanoid = "0.4"
regex = "1"
specta = { version = "=2.0.0-rc.22", features = ["serde_json"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
